--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = {version = "1.0"}
 uuid = { version = "0.8", features = ["v4"] }
 sysinfo = {version = "0.29.8", features = ["serde"]}
+json_to_table = "0.5.0"
