--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,5 @@ jobs:
         uses: docker/build-push-action@v4.1.1
         with:
           push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: umutbasal/whoami:latest
