--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = { version = "1.0" }
 sysinfo = { version = "0.29.8", features = ["serde"] }
 json_to_table = "0.5.0"
 h2 = "0.3.17"
+regex = "1.11.1"
